--- a/tryswift.html
+++ b/tryswift.html
@@ -4,17 +4,17 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <title>Try Swift</title>
 
-<!-- <link rel="stylesheet" type="text/css" href="css/tryswift.css"> -->
 <!-- <script src="js/script.js"></script> -->
 <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+<link rel="stylesheet" type="text/css" href="css/tryswift.css">
 <script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 
 <script>
 	$(function() {
 		$("#accordion").accordion({
-			collapsible: true
-			// heightStyle: "fill"
+			collapsible: true,
+			heightStyle: "content",
 		});
 	});
 </script>
@@ -22,6 +22,8 @@
 </head>
 
 <body>
+
+<div id="tutorial">
 
   	<div id="header">
   		<h1>Welcome to Try Swift!</h1>
@@ -47,7 +49,7 @@
 		<li>click &#91;Explain&#93; to view an explanation of the  example</li>
 		<li>click [Execute] (below) to run the example</li>
 		<li>click [File outputs] to view the output files produced by your script</li>
-		<li>click [Reset] to restore the example to its initial state (LOOSES YOUR CHANGES!)</li>
+		<li>click [Reset] to restore the example to its initial state (LOSES YOUR CHANGES!)</li>
 
 	</ul>
 
@@ -226,7 +228,7 @@ int seedval = readData(seedfile);</pre>
 
 </div>  <!-- accordion -->
 
-
+</div>
 
 
 
