--- a/tryswift.html
+++ b/tryswift.html
@@ -67,7 +67,7 @@
 	</div> -->
 
 
-</div>
+</div>  <!-- example -->
 
 <div class="example">
 	<h2>Hello world!</h2>
@@ -217,7 +217,7 @@
 
 			</div>
 
-		</div>
+		</div> <!-- tutorial -->
 
 
 		<div id="workarea">
@@ -252,7 +252,7 @@
 
 
 			<div id="output">
-
+				<pre id="swiftOutput"></pre>
 
 			</div>
 
