--- a/tryswift.html
+++ b/tryswift.html
@@ -53,7 +53,7 @@
 
 					</ol>
 
-					<p>To test your own script, enter some Swift code below, or in any other window</p>
+					<p>To test your own script, enter some Swift code below, or in any other window.</p>
 
 					<p>TrySwift gives you a few built-in "apps" to run, as needed by each example.
 						It executes on a pool of virtual machines, one VM per Swift run (at the moment).</p>
@@ -70,7 +70,7 @@
 </div>  <!-- example -->
 
 <div class="example">
-	<h2>Hello world!</h2>
+	<h2>Hello World!</h2>
 
 
 	<p>Let's take a closer look at this script and go through it line by line.</p>
@@ -250,11 +250,24 @@
 
 			</div>  <!-- code  -->
 
+			<div id="buttons">
+				<button id="executeButton">Execute</button>
+				<button id="reserButton">Reset</button>
+				<select id="outputs">
+					<option>File outputs</option>
+				</select>
+
+				
+				<button id="previousButton">Previous</button>
+				<button id="nextButton">Next</button>
+				
+			</div> <!-- buttons -->
+
 
 			<div id="output">
 				<pre id="swiftOutput"></pre>
 
-			</div>
+			</div> <!-- output -->
 
 		</div>
 
