--- a/tryswift.html
+++ b/tryswift.html
@@ -3,18 +3,17 @@
 		<head>
 			<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 			<title>Try Swift</title>
-
+			<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"> </script>
 			<script src="js/tryswift.js"></script>
 			<link rel="stylesheet" type="text/css" href="css/tryswift.css">
-			<script src="js/jquery.js" type="text/javascript"></script>
-			
+		
 
 		</head>
 
 		<body>
 
 			<div id="wrapright">
-
+			
 			<div id="header">
 					<h1>Welcome to Try Swift!</h1>
 				</div>
@@ -22,7 +21,7 @@
 			<div id="tutorial">
 
 
-				<div class="example">
+				<div class="example hidden" id="page-1">
 					<h2>Introduction</h2>
 					<p>
 						This web interface lets you learn Swift from your browser - nothing to install.
@@ -72,7 +71,7 @@
 
 </div>  <!-- example -->
 
-<div class="example">
+<div class="example hidden" id="page-2">
 	<h2>Hello World!</h2>
 
 
@@ -102,7 +101,7 @@ out = echo("Hello world!");
 
 </div>
 
-<div class="example">
+<div class="example hidden" id="page-3">
 	<h2>Foreach</h2>
 
 
@@ -142,7 +141,7 @@ file out <"out.txt">;</pre>
 </div>
 
 
-<div class="example">
+<div class="example hidden" id="page-4">
 	<h2>Multiple apps</h2>
 	<p>After all the parallel simulations in an ensemble run have completed, it is typically necessary to gather and analyze their results with some kind of post-processing analysis program or script. This script shows an example of this.</p>
 
@@ -199,7 +198,7 @@ average = stats_app(sims);</pre>
 
 	</div>
 
-	<div class="example">
+	<div class="example hidden" id="page-5">
 		<h2>Multi-stage workflows</h2>
 
 		<p>This example expands the workflow pattern of the previous example by adding additional stages to the workflow. Here, we generate a dynamic seed value that will be used by all of the simulations, and for each simulation, we run an pre-processing application to generate a unique "bias file". This pattern is shown below, followed by the Swift script.</p>
@@ -244,7 +243,7 @@ biasfile = genbias_app(1000, 20);
 			</div>
 
 		
-			<div id="code">
+			<!-- <div id="code"> -->
 
 				<div id="workarea-top">
 				<div id="editor"></div> 
@@ -265,9 +264,10 @@ biasfile = genbias_app(1000, 20);
 				</script>
 
 
-			</div>  <!-- code  -->
+<!-- 			</div> -->  <!-- code  -->
 
-			<div id="workarea-middle">
+			<div id="workarea-bottom">
+			<div id="bottom-top">
 			<div id="leftButtons">
 				<button id="executeButton">Execute</button>
 				<button id="reserButton">Reset</button>
@@ -280,12 +280,12 @@ biasfile = genbias_app(1000, 20);
 				<button id="nextButton">Next</button>
 			</div> <!-- buttons -->
 			</div>
-
-			<div id="workarea-bottom">
+			<div id="bottom-bottom">
 			<div id="output">
 				<pre id="swiftOutput"></pre>
 
 			</div> <!-- output -->
+		</div>
 			</div>
 
 		</div>
@@ -293,7 +293,7 @@ biasfile = genbias_app(1000, 20);
 
 	</body>
 
-
+	<script src="js/tryswift.js"></script>
 
 
 	</html>
