--- a/tryswift.html
+++ b/tryswift.html
@@ -276,7 +276,7 @@ biasfile = genbias_app(1000, 20);
 				</select>
 			</div>
 			<div id="rightButtons">
-				<button id="previousButton">Previous</button>
+				<button id="previousButton" disabled="true">Previous</button>
 				<button id="nextButton">Next</button>
 			</div> <!-- buttons -->
 			</div>
