--- a/tryswift.html
+++ b/tryswift.html
@@ -1,66 +1,71 @@
-		<!DOCTYPE html>
-		<html lang="en">
-		<head>
-			<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-			<title>Try Swift</title>
-			<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"> </script>
-			<script src="js/tryswift.js"></script>
-			<link rel="stylesheet" type="text/css" href="css/tryswift.css">
-		
-
-		</head>
-
-		<body>
-
-			<div id="wrapright">
-			
-			<div id="header">
-					<h1>Welcome to Try Swift!</h1>
-				</div>
-
-			<div id="tutorial">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<title>Try Swift</title>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"> </script>
+<!-- <script src="js/tryswift.js"></script> -->
+<script src="js/src-min/ace.js" type="text/javascript" charset="utf-8"></script>
+<link rel="stylesheet" type="text/css" href="css/tryswift.css">
 
 
-				<div class="example hidden" id="page-1">
-					<h2>Introduction</h2>
-					<p>
-						This web interface lets you learn Swift from your browser - nothing to install.
-					</p>
+</head>
+
+<body>
+
+<div id="wrapright">
+
+<div id="header">
+<h1>Welcome to Try Swift!</h1>
+</div>
+
+<div id="tutorial">
 
 
-					<p>
-						You can run the built-in example scripts, change them, and run your own scripts.
-					</p>
+<div class="example hidden" id="page-1">
+<h2>Introduction</h2>
+<p>
+	This web interface lets you learn Swift from your browser - nothing to install.
+</p>
 
 
-					<ul>
-
-						<li>select a code example from the drop-down "Example" menu above</li>
-						<li>click &#91;Explain&#93; to view an explanation of the  example</li>
-						<li>click [Execute] (below) to run the example</li>
-						<li>click [File outputs] to view the output files produced by your script</li>
-						<li>click [Reset] to restore the example to its initial state (LOSES YOUR CHANGES!)</li>
-
-					</ul>
+<p>
+	You can run the built-in example scripts, change them, and run your own scripts.
+</p>
 
 
-					<p>The example scripts are:</p>
+<ul>
 
-					<ol type="i">
+	<li>select a code example from the drop-down "Example" menu above</li>
+	<li>click &#91;Explain&#93; to view an explanation of the  example</li>
+	<li>click [Execute] (below) to run the example</li>
+	<li>click [File outputs] to view the output files produced by your script</li>
+	<li>click [Reset] to restore the example to its initial state (LOSES YOUR CHANGES!)</li>
 
-						<li><b>Hello World</b> - Shows the basic syntax for running an app to produce a file</li>
-						<li><b>Foreach</b> - Introduces the foreach statement to run multiple apps in parallel</li>
-						<li><b>Multiple apps</b> - Show dependencies between apps to specify a workflow</li>
-						<li><b>Multi-stage</b> - Example of a larger multi-stage workflow</li>
+</ul>
 
-					</ol>
 
-					<p>To test your own script, enter some Swift code below, or in any other window.</p>
+<p>The example scripts are:</p>
 
-					<p>TrySwift gives you a few built-in "apps" to run, as needed by each example.
-						It executes on a pool of virtual machines, one VM per Swift run (at the moment).</p>
+<ol type="i">
 
-						<p>The Swift language is explained in the <a href="http://swift-lang.org/docs" target="_blank">Swift User Guide</a></p>
+	<li><b>Hello World</b> - Shows the basic syntax for running an app to produce a file</li>
+	<li><b>Foreach</b> - Introduces the foreach statement to run multiple apps in parallel</li>
+	<li><b>Multiple apps</b> - Show dependencies between apps to specify a workflow</li>
+	<li><b>Multi-stage</b> - Example of a larger multi-stage workflow</li>
+
+</ol>
+
+<p>To test your own script, enter some Swift code below, or in any other window.</p>
+
+<p>TrySwift gives you a few built-in "apps" to run, as needed by each example.
+	It executes on a pool of virtual machines, one VM per Swift run (at the moment).</p>
+
+	<p>The Swift language is explained in the <a href="http://swift-lang.org/docs" target="_blank">Swift User Guide</a></p>
+
+
+<textarea id="source-1">
+tracef("Hello, World! This is my %s code!\n","Swift");</textarea>
 
 		<!-- <div class="script">
 
@@ -98,6 +103,18 @@ out = echo("Hello world!");
 	<li>Change the text from "Hello world!" to "Hello Swift!"</li>
 	<li>Change the name of the output file</li>
 </ul>
+
+<textarea id="source-2">
+type file;
+
+app (file out) echo_app (string s)
+{
+   echo s stdout=filename(out);
+}
+
+file out <"out.txt">;
+out = echo_app("Hello world!");
+</textarea>
 
 </div>
 
@@ -137,6 +154,22 @@ file out <"out.txt">;</pre>
 	<p>Defining a file mapper in this way allows a file name to be the content of a string or the output of another function. The strcat function combines multiple strings into a single string.</p>
 
 	<p>Execute the script and examine the results. You should see 10 files creates with random numbers.</p>
+
+<textarea id="source-3">
+type file;
+
+app (file o) simulate_app ()
+{
+  simulate stdout=filename(o);
+}
+
+foreach i in [1:10] {
+  string fname=strcat("output/sim_", i, ".out");
+  file f <single_file_mapper; file=fname>;
+  f = simulate_app();
+}
+</textarea>
+
 
 </div>
 
@@ -196,6 +229,34 @@ average = stats_app(sims);</pre>
 
 		</ul>
 
+<textarea id="source-4">
+type file;
+
+app (file o) simulate_app (int time)
+{
+  simulate "-t" time stdout=filename(o);
+}
+
+app (file o) stats_app (file s[])
+{
+  stats filenames(s) stdout=filename(o);
+}
+
+file sims[];
+int time = 5;
+int nsims = 10;
+
+foreach i in [1:nsims] {
+  string fname = strcat("output/sim_",i,".out");
+  file simout <single_file_mapper; file=fname>;
+  simout = simulate_app(time);
+  sims[i] = simout;
+}
+
+file average <"output/average.out">;
+average = stats_app(sims);
+</textarea>
+
 	</div>
 
 	<div class="example hidden" id="page-5">
@@ -229,6 +290,68 @@ biasfile = genbias_app(1000, 20);
 
 				</ul>
 
+<textarea id="source-5">
+type file;
+
+app (file out) genseed_app (int nseeds)
+{
+  genseed "-r" 2000000 "-n" nseeds stdout=@out;
+}
+
+app (file out) genbias_app (int bias_range, int nvalues)
+{
+  genbias "-r" bias_range "-n" nvalues stdout=@out;
+}
+
+app (file out, file log) simulation_app (int timesteps, int sim_range,
+    file bias_file, int scale, int sim_count)
+{
+  simulate "-t" timesteps "-r" sim_range "-B" @bias_file "-x" scale
+           "-n" sim_count stdout=@out stderr=@log;
+}
+
+app (file out, file log) analyze_app (file s[])
+{
+  stats filenames(s) stdout=@out stderr=@log;
+}
+
+# Values that shape the run
+int nsim = 10;   # number of simulation programs to run
+int steps = 1;   # number of timesteps (seconds) per simulation
+int range = 100; # range of the generated random numbers
+int values = 10; # number of values generated per simulation
+
+# Main script and data
+tracef("\n*** Script parameters: nsim=%i range=%i num values=%i\n\n", 
+		nsim, range, values);
+
+# Dynamically generated bias for simulation ensemble
+file seedfile<"output/seed.dat">;
+seedfile = genseed_app(1);
+
+int seedval = readData(seedfile);
+tracef("Generated seed=%i\n", seedval);
+
+file sims[]; # Array of files to hold each simulation output
+
+foreach i in [0:nsim-1] {
+  file biasfile <single_file_mapper; 
+  				 file=strcat("output/bias_",i,".dat")>;
+  file simout   <single_file_mapper; 
+  				 file=strcat("output/sim_",i,".out")>;
+  file simlog   <single_file_mapper; 
+  				 file=strcat("output/sim_",i,".log")>;
+  biasfile = genbias_app(1000, 20);
+  (simout,simlog) = simulation_app(steps, range, biasfile, 
+  								   1000000, values);
+  sims[i] = simout;
+}
+
+file stats_out<"output/average.out">;
+file stats_log<"output/average.log">;
+(stats_out,stats_log) = analyze_app(sims);
+</textarea>
+
 			</div>
 
 		</div> <!-- tutorial -->
@@ -249,20 +372,17 @@ biasfile = genbias_app(1000, 20);
 				<div id="editor"></div> 
 				</div>
 
-				<script src="js/src-min/ace.js" type="text/javascript" charset="utf-8"></script>
+				<!-- <script src="js/src-min/ace.js" type="text/javascript" charset="utf-8"></script>
 
-				<script>
-				var editor = ace.edit("editor");
-				editor.setFontSize('12px');
-				editor.setTheme("ace/theme/KatzenMilch");
-				editor.getSession().setMode("ace/mode/text");
-				// editor.setShowPrintMargin(false);
-				// editor.setHighlighthActiveLine(false);
-				// editor.setDisplayIndentGuides(false);
-				// editor.setValue("the new text here");
+				// <script>
+				// var editor = ace.edit("editor");
+				// editor.setFontSize('12px');
+				// editor.setTheme("ace/theme/KatzenMilch");
+				// editor.getSession().setMode("ace/mode/text");
+				// editor.setValue($("#source-1").text(), -1);
 
-				</script>
-
+				// </script>
+ -->
 
 <!-- 			</div> -->  <!-- code  -->
 
@@ -270,7 +390,7 @@ biasfile = genbias_app(1000, 20);
 			<div id="bottom-top">
 			<div id="leftButtons">
 				<button id="executeButton">Execute</button>
-				<button id="reserButton">Reset</button>
+				<button id="resetButton">Reset</button>
 				<select id="outputs">
 					<option>File outputs</option>
 				</select>
@@ -279,24 +399,24 @@ biasfile = genbias_app(1000, 20);
 				<button id="previousButton" disabled="true">Previous</button>
 				<button id="nextButton">Next</button>
 			</div> <!-- buttons -->
-			</div>
-			<div id="bottom-bottom">
+		</div>
+		<div id="bottom-bottom">
 			<div id="output">
 				<pre id="swiftOutput"></pre>
 
 			</div> <!-- output -->
 		</div>
-			</div>
+	</div>
 
-		</div>
-
-
-	</body>
-
-	<script src="js/tryswift.js"></script>
+</div>
 
 
-	</html>
+</body>
+
+<script src="js/tryswift.js"></script>
+
+
+</html>
 
 
 
